@@ -1,3 +1,10 @@
+2009-04-20  Lars Hartmann  <lars (at) chaotika (dot) org>
+
+	Fixed several lint warnings:
+	* src/liblpatom.c: fixed.
+	* src/liblpxpak.c: fixed.
+	* src/liblparchives.c: fixed.
+
 2009-03-31  Lars Hartmann  <lars (at) chaotika (dot) org>
 
 	* include/archives.h: extended.
